[package]
name = "exec-sendrecv"
version = "0.1.0"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "^0.1.48"


[dependencies]
clap = { version = "^4.5", features = ["derive"] }
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
dotenvy = "0.15.7"
iroh = { version = "0.98.2", features = ["address-lookup-mdns"] }
iroh-blobs = "0.100.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
supports-color = "3.0.2"
tokio = { version = "1.52.1", features = ["rt", "signal"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.dev.package.backtrace]
opt-level = 3
